intel/bench_214_new/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multGxGx_with_main/log.txt
bench_214_new/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multGxGx_with_main/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multGxGx_with_main.c:37:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const Gx1;
                ^
                    = nullptr
bench_214_new/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multGxGx_with_main/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multGxGx_with_main.c:38:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const Gx2;
                ^
                    = nullptr
bench_214_new/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multGxGx_with_main/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multGxGx_with_main.c:39:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const Gx3;
                ^
                    = nullptr
3 errors generated.
HLS FPGA Parse FAILED.
